--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,11 @@
-# Compiled class file
-*.class
+# Added by cargo
 
-# Log file
-*.log
+/target
 
-# BlueJ files
-*.ctxt
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Added by cargo
+#
+# already existing elements were commented out
 
-# Package Files #
-*.jar
-!gradle-wrapper.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# Ignore Gradle project-specific cache directory
-.gradle
-
-# Ignore Gradle build output directory
-build
+#/target
+/Cargo.lock
